# SATA

./: .gitignore  Initial_test.ipynb  config.py  database.py  graph_builder.py  graph_nodes.py  langgraph.json  llm_setup.py  main.py  prompts.py  pyproject.toml  query_agent.py
CSV/: AI TestData - Parameter_table.csv  AI TestData - Statitc_value_table.csv
DB/: sata_data.db  sata_data_parameter.db  sata_data_static_value.db
my_agent/: __init__.py  agent.py
my_agent/utils/: __init__.py  nodes.py  state.py  tools.py
